# address_parser

./: .gitignore  README.md  pyproject.toml
address_parser/: parser.py
tests/: test_address_parser.py
